#
#############################################################################

########## RECENT CHANGE-LOG #########

  Note that we version STiki by the date (UTC locale) of the build-date. This
  is also the file-name under which the executable/source is released. The 
  formal version number (e.g., 2.1) is in too many places to be 
  conveniently altered for small changes:
  
  * 2016-XX-XX
  		# Links fixed in the "AIV notification popup" dialog
  
  * 2015-07-02 - EMERGENCY RELEASE
  		# The WMF has changed the way pagination/continuation is handled for
  		  API queries that produce many results. This breaks some legacy code,
  		  but curiously, one can still use the "legacy approach" by providing
  		  an additional parameter with requests. Some more WMF details are at:
  			[https://lists.wikimedia.org/pipermail/wikitech-l/2015-June/081931.html].
  			Internal to STiki this primarily affects the permission check of 
  			"1000+ edits in NS0". Users who who rely on this criteria will likely
  			need to upgrade in order to use STiki. 
  			
  * 2015-06-13 - EMERGENCY RELEASE
  		# The WMF now requires all communication to be HTTPS. While STiki has 
  		  long had an HTTPS option, for those that did not have it enabled, 
  		  all API requests began failing when the change was initiated. STiki
  		  now uses HTTPS only and the option has been removed from the menu.
  		  Several hard-coded paths were also discovered in the code.
      # Resolved issue where custom AGF messages were not saving and 
        persisting between edits/sessions (T#051).
  
  * 2014-12-12
      # Something seems to have changed with the way Mediawiki parses 
        new line instructions, causing section headers to not be displayed, 
        and causing warnings to run together. STiki has changed line breaks 
        on talk pages messages from "/r" (carriage return) to "/n" (newline).
  
  * 2014-12-01